samples/_failures_safe/1761248685_2ce696_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cec82648.c: In function ‘transpose_matrix’:
./samples/SAFE/__tmp_cec82648.c:151:5: error: expected identifier at end of input
  151 |     result->rows = mat->
      |     ^~~~~~
./samples/SAFE/__tmp_cec82648.c:151:5: error: expected declaration or statement at end of input
